started making a path. created a path structure and added a path list member variable to board

--- a/BroodMaker/BroodMaker.vcxproj.filters
+++ b/BroodMaker/BroodMaker.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Card.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Struct_path.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Card.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Struct_path.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
