made a struct_parameter which can be passed to class ctor

--- a/BroodMaker/BroodMaker.vcxproj.filters
+++ b/BroodMaker/BroodMaker.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Card.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Struct_CtorParam.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="Struct_path.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Struct_path.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Struct_CtorParam.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
