--- a/BroodMaker/BroodMaker.vcxproj
+++ b/BroodMaker/BroodMaker.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Board.cpp" />
+    <ClCompile Include="Button.cpp" />
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="Dice.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -29,10 +30,12 @@
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Struct_CtorParam.cpp" />
     <ClCompile Include="Struct_path.cpp" />
+    <ClCompile Include="TextBox.cpp" />
     <ClCompile Include="Tiles.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h" />
+    <ClInclude Include="Button.h" />
     <ClInclude Include="Card.h" />
     <ClInclude Include="Dice.h" />
     <ClInclude Include="PathManager.h" />
@@ -41,6 +44,7 @@
     <ClInclude Include="Struct_path.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="TextBox.h" />
     <ClInclude Include="Tiles.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
