--- a/BroodMaker/BroodMaker.vcxproj
+++ b/BroodMaker/BroodMaker.vcxproj
@@ -26,7 +26,9 @@
     <ClCompile Include="DropDownMenu.cpp" />
     <ClCompile Include="ElementSelection.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MenuBar.cpp" />
     <ClCompile Include="MouseHandler.cpp" />
+    <ClCompile Include="Panel.cpp" />
     <ClCompile Include="PathManager.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerManager.cpp" />
@@ -46,7 +48,9 @@
     <ClInclude Include="Dice.h" />
     <ClInclude Include="DropDownMenu.h" />
     <ClInclude Include="ElementSelection.h" />
+    <ClInclude Include="MenuBar.h" />
     <ClInclude Include="MouseHandler.h" />
+    <ClInclude Include="Panel.h" />
     <ClInclude Include="PathManager.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="Struct_CtorParam.h" />
