--- a/BroodMaker/BroodMaker.vcxproj.filters
+++ b/BroodMaker/BroodMaker.vcxproj.filters
@@ -1,144 +1,174 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="UI">
-      <UniqueIdentifier>{039c07b0-95d7-4ef0-9362-24f8ccf9e581}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src">
       <UniqueIdentifier>{ab911ca5-49a2-487b-90fa-7ec7ed3d2c61}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\Header Files">
+    <Filter Include="src\Application">
+      <UniqueIdentifier>{61bad5b1-53c2-4f31-8653-85fe95c40090}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Application\Header Files">
+      <UniqueIdentifier>{b2626c5f-8ee7-4f85-afa0-02e29c682dc8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Application\Source Files">
+      <UniqueIdentifier>{f6d3f1d8-acee-403a-981d-a0d596daa233}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\UI">
+      <UniqueIdentifier>{039c07b0-95d7-4ef0-9362-24f8ccf9e581}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\UI\Header Files">
       <UniqueIdentifier>{6ee6010f-e8d2-4a57-9e2a-636965c22610}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\Source Files">
+    <Filter Include="src\UI\Source Files">
       <UniqueIdentifier>{271b785d-bb99-4455-b439-2de0c41cd6fc}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="src\Unorganized">
+      <UniqueIdentifier>{d7106b46-e160-4d73-a505-e73ac7966967}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Header Files">
+    <Filter Include="src\Unorganized\Header Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    </Filter>
+    <Filter Include="src\Unorganized\Source Files">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Button.cpp">
-      <Filter>UI\Source Files</Filter>
+      <Filter>src\UI\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Board.cpp">
-      <Filter>src\Source Files</Filter>
+      <Filter>src\Unorganized\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Card.cpp">
-      <Filter>src\Source Files</Filter>
+      <Filter>src\Unorganized\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Dice.cpp">
-      <Filter>src\Source Files</Filter>
+      <Filter>src\Unorganized\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Main.cpp">
-      <Filter>src\Source Files</Filter>
+      <Filter>src\Unorganized\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PathManager.cpp">
-      <Filter>src\Source Files</Filter>
+      <Filter>src\Unorganized\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
-      <Filter>src\Source Files</Filter>
+      <Filter>src\Unorganized\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PlayerManager.cpp">
-      <Filter>src\Source Files</Filter>
+      <Filter>src\Unorganized\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
-      <Filter>src\Source Files</Filter>
+      <Filter>src\Unorganized\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Struct_CtorParam.cpp">
-      <Filter>src\Source Files</Filter>
+      <Filter>src\Unorganized\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Struct_path.cpp">
-      <Filter>src\Source Files</Filter>
+      <Filter>src\Unorganized\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Tiles.cpp">
-      <Filter>src\Source Files</Filter>
+      <Filter>src\Unorganized\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TextBox.cpp">
-      <Filter>UI\Source Files</Filter>
+      <Filter>src\UI\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="UIElement.cpp">
-      <Filter>UI\Source Files</Filter>
+      <Filter>src\UI\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MouseHandler.cpp">
-      <Filter>src\Source Files</Filter>
+      <Filter>src\Unorganized\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="UtilityFunctions.cpp">
-      <Filter>src\Source Files</Filter>
+      <Filter>src\Unorganized\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="UI_ID.cpp">
-      <Filter>UI\Source Files</Filter>
+      <Filter>src\UI\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ElementSelection.cpp">
-      <Filter>UI\Source Files</Filter>
+      <Filter>src\UI\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DropDownMenu.cpp">
-      <Filter>UI\Source Files</Filter>
+      <Filter>src\UI\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MenuBar.cpp">
-      <Filter>UI\Source Files</Filter>
+      <Filter>src\UI\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BoardEditor.cpp">
+      <Filter>src\Application\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Application.cpp">
+      <Filter>src\Application\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Data.cpp">
+      <Filter>src\Application\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Button.h">
-      <Filter>UI\Header Files</Filter>
+      <Filter>src\UI\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="stdafx.h">
-      <Filter>src\Header Files</Filter>
+      <Filter>src\Unorganized\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Board.h">
-      <Filter>src\Header Files</Filter>
+      <Filter>src\Unorganized\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Card.h">
-      <Filter>src\Header Files</Filter>
+      <Filter>src\Unorganized\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Dice.h">
-      <Filter>src\Header Files</Filter>
+      <Filter>src\Unorganized\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PathManager.h">
-      <Filter>src\Header Files</Filter>
+      <Filter>src\Unorganized\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
-      <Filter>src\Header Files</Filter>
+      <Filter>src\Unorganized\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PlayerManager.h">
-      <Filter>src\Header Files</Filter>
+      <Filter>src\Unorganized\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Struct_CtorParam.h">
-      <Filter>src\Header Files</Filter>
+      <Filter>src\Unorganized\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Struct_path.h">
-      <Filter>src\Header Files</Filter>
+      <Filter>src\Unorganized\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Tiles.h">
-      <Filter>src\Header Files</Filter>
+      <Filter>src\Unorganized\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TextBox.h">
-      <Filter>UI\Header Files</Filter>
+      <Filter>src\UI\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="UIElement.h">
-      <Filter>UI\Header Files</Filter>
+      <Filter>src\UI\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MouseHandler.h">
-      <Filter>src\Header Files</Filter>
+      <Filter>src\Unorganized\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="UtilityFunctions.h" />
     <ClInclude Include="UI_ID.h">
-      <Filter>UI\Header Files</Filter>
+      <Filter>src\UI\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ElementSelection.h">
-      <Filter>UI\Header Files</Filter>
+      <Filter>src\UI\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DropDownMenu.h">
-      <Filter>UI\Header Files</Filter>
+      <Filter>src\UI\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MenuBar.h">
-      <Filter>UI\Header Files</Filter>
+      <Filter>src\UI\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BoardEditor.h">
+      <Filter>src\Application\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Application.h">
+      <Filter>src\Application\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Data.h">
+      <Filter>src\Application\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
