--- a/BroodMaker/BroodMaker.vcxproj
+++ b/BroodMaker/BroodMaker.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="Dice.cpp" />
     <ClCompile Include="DropDownMenu.cpp" />
     <ClCompile Include="ElementSelection.cpp" />
+    <ClCompile Include="InitialWorkSpace.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MenuBar.cpp" />
     <ClCompile Include="MouseHandler.cpp" />
@@ -42,6 +43,7 @@
     <ClCompile Include="UIElement.cpp" />
     <ClCompile Include="UI_ID.cpp" />
     <ClCompile Include="UtilityFunctions.cpp" />
+    <ClCompile Include="WorkSpace.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -53,6 +55,7 @@
     <ClInclude Include="Dice.h" />
     <ClInclude Include="DropDownMenu.h" />
     <ClInclude Include="ElementSelection.h" />
+    <ClInclude Include="InitialWorkSpace.h" />
     <ClInclude Include="MenuBar.h" />
     <ClInclude Include="MouseHandler.h" />
     <ClInclude Include="PathManager.h" />
@@ -66,6 +69,7 @@
     <ClInclude Include="UIElement.h" />
     <ClInclude Include="UI_ID.h" />
     <ClInclude Include="UtilityFunctions.h" />
+    <ClInclude Include="WorkSpace.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
