--- a/BroodMaker/BroodMaker.vcxproj
+++ b/BroodMaker/BroodMaker.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="BoardEditor.cpp" />
+    <ClCompile Include="DropDownInput.cpp" />
     <ClCompile Include="SpriteHandler.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Card.cpp" />
@@ -50,6 +51,7 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="Board.h" />
     <ClInclude Include="BoardEditor.h" />
+    <ClInclude Include="DropDownInput.h" />
     <ClInclude Include="SpriteHandler.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="Card.h" />
