--- a/BroodMaker/BroodMaker.vcxproj.filters
+++ b/BroodMaker/BroodMaker.vcxproj.filters
@@ -22,14 +22,14 @@
     <Filter Include="src\UI\Source Files">
       <UniqueIdentifier>{271b785d-bb99-4455-b439-2de0c41cd6fc}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Unorganized">
+    <Filter Include="src\Editors">
       <UniqueIdentifier>{d7106b46-e160-4d73-a505-e73ac7966967}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Unorganized\Header Files">
+    <Filter Include="src\Editors\Header Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="src\Unorganized\Source Files">
+    <Filter Include="src\Editors\Source Files">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
@@ -39,46 +39,43 @@
       <Filter>src\UI\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Board.cpp">
-      <Filter>src\Unorganized\Source Files</Filter>
+      <Filter>src\Editors\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Card.cpp">
-      <Filter>src\Unorganized\Source Files</Filter>
+      <Filter>src\Editors\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Dice.cpp">
-      <Filter>src\Unorganized\Source Files</Filter>
+      <Filter>src\Editors\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Main.cpp">
-      <Filter>src\Unorganized\Source Files</Filter>
+      <Filter>src\Editors\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PathManager.cpp">
-      <Filter>src\Unorganized\Source Files</Filter>
+      <Filter>src\Editors\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
-      <Filter>src\Unorganized\Source Files</Filter>
+      <Filter>src\Editors\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PlayerManager.cpp">
-      <Filter>src\Unorganized\Source Files</Filter>
+      <Filter>src\Editors\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
-      <Filter>src\Unorganized\Source Files</Filter>
+      <Filter>src\Editors\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Struct_CtorParam.cpp">
-      <Filter>src\Unorganized\Source Files</Filter>
+      <Filter>src\Editors\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Struct_path.cpp">
-      <Filter>src\Unorganized\Source Files</Filter>
+      <Filter>src\Editors\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Tiles.cpp">
-      <Filter>src\Unorganized\Source Files</Filter>
+      <Filter>src\Editors\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TextBox.cpp">
       <Filter>src\UI\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="UIElement.cpp">
       <Filter>src\UI\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="UtilityFunctions.cpp">
-      <Filter>src\Unorganized\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="UI_ID.cpp">
       <Filter>src\UI\Source Files</Filter>
@@ -92,9 +89,6 @@
     <ClCompile Include="MenuBar.cpp">
       <Filter>src\UI\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="BoardEditor.cpp">
-      <Filter>src\Application\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Application.cpp">
       <Filter>src\Application\Source Files</Filter>
     </ClCompile>
@@ -107,16 +101,25 @@
     <ClCompile Include="WorkSpace.cpp">
       <Filter>src\Application\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MouseHandler.cpp">
-      <Filter>src\UI\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="SpriteHandler.cpp">
-      <Filter>src\Unorganized\Source Files</Filter>
+      <Filter>src\Editors\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DropDownInput.cpp">
       <Filter>src\UI\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GlobalVariables.cpp">
+      <Filter>src\Application\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MouseHandler.cpp">
+      <Filter>src\Application\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="EditorWorkspace.cpp">
+      <Filter>src\Application\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BoardEditor.cpp">
+      <Filter>src\Editors\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UtilityFunctions.cpp">
       <Filter>src\Application\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -125,31 +128,31 @@
       <Filter>src\UI\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="stdafx.h">
-      <Filter>src\Unorganized\Header Files</Filter>
+      <Filter>src\Editors\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Board.h">
-      <Filter>src\Unorganized\Header Files</Filter>
+      <Filter>src\Editors\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Card.h">
-      <Filter>src\Unorganized\Header Files</Filter>
+      <Filter>src\Editors\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Dice.h">
-      <Filter>src\Unorganized\Header Files</Filter>
+      <Filter>src\Editors\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PathManager.h">
-      <Filter>src\Unorganized\Header Files</Filter>
+      <Filter>src\Editors\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
-      <Filter>src\Unorganized\Header Files</Filter>
+      <Filter>src\Editors\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PlayerManager.h">
-      <Filter>src\Unorganized\Header Files</Filter>
+      <Filter>src\Editors\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Struct_path.h">
-      <Filter>src\Unorganized\Header Files</Filter>
+      <Filter>src\Editors\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Tiles.h">
-      <Filter>src\Unorganized\Header Files</Filter>
+      <Filter>src\Editors\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TextBox.h">
       <Filter>src\UI\Header Files</Filter>
@@ -169,9 +172,6 @@
     <ClInclude Include="MenuBar.h">
       <Filter>src\UI\Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="BoardEditor.h">
-      <Filter>src\Application\Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Application.h">
       <Filter>src\Application\Header Files</Filter>
     </ClInclude>
@@ -184,14 +184,8 @@
     <ClInclude Include="WorkSpace.h">
       <Filter>src\Application\Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="UtilityFunctions.h">
-      <Filter>src\Unorganized\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="MouseHandler.h">
-      <Filter>src\UI\Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="SpriteHandler.h">
-      <Filter>src\Unorganized\Header Files</Filter>
+      <Filter>src\Editors\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DropDownInput.h">
       <Filter>src\UI\Header Files</Filter>
@@ -200,7 +194,19 @@
       <Filter>src\Application\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Struct_CtorParam.h">
-      <Filter>src\Unorganized\Header Files</Filter>
+      <Filter>src\Editors\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MouseHandler.h">
+      <Filter>src\Application\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EditorWorkspace.h">
+      <Filter>src\Application\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BoardEditor.h">
+      <Filter>src\Editors\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UtilityFunctions.h">
+      <Filter>src\Application\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
