made editor workspace, board editor workspace. Created general board setting in the editor workspaces. Fixed player class, and playermanager class. Chaged struct_path to a Path class

--- a/BroodMaker/BroodMaker.vcxproj
+++ b/BroodMaker/BroodMaker.vcxproj
@@ -31,17 +31,18 @@
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="Data.cpp" />
     <ClCompile Include="Dice.cpp" />
-    <ClCompile Include="InitialWorkSpace.cpp" />
+    <ClCompile Include="HomeWorkSpace.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MenuBar.cpp" />
     <ClCompile Include="MouseHandler.cpp" />
+    <ClCompile Include="PathLinkedList.cpp" />
     <ClCompile Include="PathManager.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerManager.cpp" />
     <ClCompile Include="SpriteHandler.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Struct_CtorParam.cpp" />
-    <ClCompile Include="Struct_path.cpp" />
+    <ClCompile Include="Path.cpp" />
     <ClCompile Include="TextBox.cpp" />
     <ClCompile Include="Tiles.cpp" />
     <ClCompile Include="UIElement.cpp" />
@@ -62,14 +63,15 @@
     <ClInclude Include="Card.h" />
     <ClInclude Include="Data.h" />
     <ClInclude Include="Dice.h" />
-    <ClInclude Include="InitialWorkSpace.h" />
+    <ClInclude Include="HomeWorkSpace.h" />
     <ClInclude Include="MenuBar.h" />
     <ClInclude Include="MouseHandler.h" />
+    <ClInclude Include="PathLinkedList.h" />
     <ClInclude Include="PathManager.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="SpriteHandler.h" />
     <ClInclude Include="Struct_CtorParam.h" />
-    <ClInclude Include="Struct_path.h" />
+    <ClInclude Include="Path.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TextBox.h" />
