--- a/BroodMaker/BroodMaker.vcxproj.filters
+++ b/BroodMaker/BroodMaker.vcxproj.filters
@@ -7,26 +7,6 @@
     <Filter Include="src\Application">
       <UniqueIdentifier>{61bad5b1-53c2-4f31-8653-85fe95c40090}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Application\Header Files">
-      <UniqueIdentifier>{b2626c5f-8ee7-4f85-afa0-02e29c682dc8}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="src\Application\Source Files">
-      <UniqueIdentifier>{f6d3f1d8-acee-403a-981d-a0d596daa233}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="src\Editors">
-      <UniqueIdentifier>{d7106b46-e160-4d73-a505-e73ac7966967}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="src\Editors\Header Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="src\Editors\Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="src\main">
-      <UniqueIdentifier>{473e5c6e-9d93-4769-a525-94e83f4592a0}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\BroodUI">
       <UniqueIdentifier>{4793e693-9ce6-41b0-83d3-a64217ae70cf}</UniqueIdentifier>
     </Filter>
@@ -36,58 +16,72 @@
     <Filter Include="src\BroodUI\Source Files">
       <UniqueIdentifier>{2c5023a8-b5ac-48f1-90d2-c35a999b4e1d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Components">
+      <UniqueIdentifier>{d7106b46-e160-4d73-a505-e73ac7966967}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Components\Header Files">
+      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
+      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    </Filter>
+    <Filter Include="src\Components\Source Files">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    </Filter>
+    <Filter Include="src\Application\Workspace">
+      <UniqueIdentifier>{05706462-4b35-4426-aec7-cf2c61586aa3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Application\Workspace\Header Files">
+      <UniqueIdentifier>{b172850b-a0ff-4e6a-848a-f94d5547edf1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Application\Workspace\Source Siles">
+      <UniqueIdentifier>{63862170-54d1-463d-83a2-28ce4547f1b5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Application\main">
+      <UniqueIdentifier>{473e5c6e-9d93-4769-a525-94e83f4592a0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Application\main\Source Files">
+      <UniqueIdentifier>{f6d3f1d8-acee-403a-981d-a0d596daa233}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Application\main\Header Files">
+      <UniqueIdentifier>{b2626c5f-8ee7-4f85-afa0-02e29c682dc8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Board.cpp">
-      <Filter>src\Editors\Source Files</Filter>
+      <Filter>src\Components\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Card.cpp">
-      <Filter>src\Editors\Source Files</Filter>
+      <Filter>src\Components\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Dice.cpp">
-      <Filter>src\Editors\Source Files</Filter>
+      <Filter>src\Components\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PathManager.cpp">
-      <Filter>src\Editors\Source Files</Filter>
+      <Filter>src\Components\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
-      <Filter>src\Editors\Source Files</Filter>
+      <Filter>src\Components\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PlayerManager.cpp">
-      <Filter>src\Editors\Source Files</Filter>
+      <Filter>src\Components\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Struct_CtorParam.cpp">
-      <Filter>src\Editors\Source Files</Filter>
+      <Filter>src\Components\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Struct_path.cpp">
-      <Filter>src\Editors\Source Files</Filter>
+    <ClCompile Include="Path.cpp">
+      <Filter>src\Components\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Tiles.cpp">
-      <Filter>src\Editors\Source Files</Filter>
+      <Filter>src\Components\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Application.cpp">
-      <Filter>src\Application\Source Files</Filter>
+      <Filter>src\Application\main\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Data.cpp">
-      <Filter>src\Application\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="InitialWorkSpace.cpp">
-      <Filter>src\Application\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="WorkSpace.cpp">
-      <Filter>src\Application\Source Files</Filter>
+      <Filter>src\Application\main\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GlobalVariables.cpp">
-      <Filter>src\Application\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="EditorWorkspace.cpp">
-      <Filter>src\Application\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="BoardEditor.cpp">
-      <Filter>src\Editors\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Main.cpp">
-      <Filter>src\main</Filter>
+      <Filter>src\Application\main\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Button.cpp">
       <Filter>src\BroodUI\Source Files</Filter>
@@ -122,58 +116,64 @@
     <ClCompile Include="UtilityFunctions.cpp">
       <Filter>src\BroodUI\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WorkSpace.cpp">
+      <Filter>src\Application\Workspace\Source Siles</Filter>
+    </ClCompile>
+    <ClCompile Include="HomeWorkSpace.cpp">
+      <Filter>src\Application\Workspace\Source Siles</Filter>
+    </ClCompile>
+    <ClCompile Include="EditorWorkspace.cpp">
+      <Filter>src\Application\Workspace\Source Siles</Filter>
+    </ClCompile>
+    <ClCompile Include="Main.cpp">
+      <Filter>src\Application\main\Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="stdafx.cpp">
-      <Filter>src\main</Filter>
+      <Filter>src\Application\main\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BoardEditor.cpp">
+      <Filter>src\Application\Workspace\Source Siles</Filter>
+    </ClCompile>
+    <ClCompile Include="PathLinkedList.cpp">
+      <Filter>src\Components\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h">
-      <Filter>src\Editors\Header Files</Filter>
+      <Filter>src\Components\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Card.h">
-      <Filter>src\Editors\Header Files</Filter>
+      <Filter>src\Components\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Dice.h">
-      <Filter>src\Editors\Header Files</Filter>
+      <Filter>src\Components\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PathManager.h">
-      <Filter>src\Editors\Header Files</Filter>
+      <Filter>src\Components\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
-      <Filter>src\Editors\Header Files</Filter>
+      <Filter>src\Components\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PlayerManager.h">
-      <Filter>src\Editors\Header Files</Filter>
+      <Filter>src\Components\Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Struct_path.h">
-      <Filter>src\Editors\Header Files</Filter>
+    <ClInclude Include="Path.h">
+      <Filter>src\Components\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Tiles.h">
-      <Filter>src\Editors\Header Files</Filter>
+      <Filter>src\Components\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Application.h">
-      <Filter>src\Application\Header Files</Filter>
+      <Filter>src\Application\main\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Data.h">
-      <Filter>src\Application\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="InitialWorkSpace.h">
-      <Filter>src\Application\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="WorkSpace.h">
-      <Filter>src\Application\Header Files</Filter>
+      <Filter>src\Application\main\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GlobalVariables.h">
-      <Filter>src\Application\Header Files</Filter>
+      <Filter>src\Application\main\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Struct_CtorParam.h">
-      <Filter>src\Editors\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="EditorWorkspace.h">
-      <Filter>src\Application\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="BoardEditor.h">
-      <Filter>src\Editors\Header Files</Filter>
+      <Filter>src\Components\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Button.h">
       <Filter>src\BroodUI\Header Files</Filter>
@@ -208,8 +208,23 @@
     <ClInclude Include="MouseHandler.h">
       <Filter>src\BroodUI\Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EditorWorkspace.h">
+      <Filter>src\Application\Workspace\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HomeWorkSpace.h">
+      <Filter>src\Application\Workspace\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WorkSpace.h">
+      <Filter>src\Application\Workspace\Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="stdafx.h">
-      <Filter>src\main</Filter>
+      <Filter>src\Application\main\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BoardEditor.h">
+      <Filter>src\Application\Workspace\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PathLinkedList.h">
+      <Filter>src\Components\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
